# openrefine_mcp

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docs/dependencies/: mcp-python-sdk.md  openrefine-api.md
docs/prds/: openrefine_mcp_prd.md  project_models_as_resource_prd.md
openrefine_mcp/: __init__.py  models.py  openrefine_client.py  openrefine_server.py  settings.py
tests/: __init__.py  conftest.py  test_openrefine_client.py
tests/cassettes/: TestOpenRefineClient.test_apply_operations_invalid_project.yaml  TestOpenRefineClient.test_apply_operations_success.yaml  TestOpenRefineClient.test_apply_operations_with_string.yaml  TestOpenRefineClient.test_create_project_success.yaml  TestOpenRefineClient.test_create_project_without_name.yaml  TestOpenRefineClient.test_delete_project_invalid_project.yaml  TestOpenRefineClient.test_delete_project_success.yaml  TestOpenRefineClient.test_export_csv_invalid_project.yaml  TestOpenRefineClient.test_export_csv_success.yaml  TestOpenRefineClient.test_get_project_models_invalid_project.yaml  TestOpenRefineClient.test_get_project_models_success.yaml
