[project]
name = "openrefine-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "python-dotenv>=1.1.1",
    "python-mimeparse>=2.0.0",
    "vcrpy>=7.0.0",
]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
